--- a/_site.yml
+++ b/_site.yml
@@ -1,4 +1,5 @@
 name: "my-website"
+output_dir: "."
 navbar:
   title: "My Website"
   left:
@@ -9,4 +10,4 @@ navbar:
     - text: "Projects"
       menu:
         - text: "DC Crime Visualization"
-          href: DC-Crime-Viz/index.html
+          href: _site/DC-Crime-Viz/index.html
